--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,3 +8,4 @@ services:
       AWS_ACCESS_KEY: ${AWS_ACCESS_KEY}
       AWS_SECRET_KEY: ${AWS_SECRET_KEY}
       AWS_REGION: ${AWS_REGION}
+      ROUTE53_DELEGATION_SET: ${ROUTE53_DELEGATION_SET}
