--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,3 +9,4 @@ services:
       AWS_SECRET_KEY: ${AWS_SECRET_KEY}
       AWS_REGION: ${AWS_REGION}
       ROUTE53_DELEGATION_SET: ${ROUTE53_DELEGATION_SET}
+      CDN_HOSTED_ZONE_ID: ${CDN_HOSTED_ZONE_ID}
