add python test stuff to dockerignore

--- a/docker/.dockerignore
+++ b/docker/.dockerignore
@@ -9,3 +9,17 @@ README.md
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
