--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
 python:
   - "3.6"
+branches:
+  only:
+  - master
 install:
   - pip install -r requirements.txt
 script:
   - pytest
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
